{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 176,
  "lineage": "b4620a81-8b71-2bd7-a23d-51988a735dd3",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "airbyte_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.230.48.12",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2024-09-26T17:35:30.438-07:00",
            "id": "projects/liti-case-analytics-engineer/regions/us-west1/addresses/airbyte-ip",
            "name": "airbyte-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "liti-case-analytics-engineer",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/liti-case-analytics-engineer/regions/us-west1/addresses/airbyte-ip",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/liti-case-analytics-engineer/zones/us-west1-b/instances/airflow-instance"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "airflow_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.197.20.45",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2024-09-26T17:35:30.896-07:00",
            "id": "projects/liti-case-analytics-engineer/regions/us-west1/addresses/airflow-ip",
            "name": "airflow-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "liti-case-analytics-engineer",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/liti-case-analytics-engineer/regions/us-west1/addresses/airflow-ip",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/liti-case-analytics-engineer/zones/us-west1-b/instances/airbyte-instance"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "metabase_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.230.80.123",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2024-09-26T17:17:13.769-07:00",
            "id": "projects/liti-case-analytics-engineer/regions/us-west1/addresses/metabase-ip",
            "name": "metabase-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "liti-case-analytics-engineer",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/liti-case-analytics-engineer/regions/us-west1/addresses/metabase-ip",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/liti-case-analytics-engineer/zones/us-west1-b/instances/metabase-instance"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "mongodb_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.83.94.111",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2024-09-28T15:29:39.290-07:00",
            "id": "projects/liti-case-analytics-engineer/regions/us-west1/addresses/mongodb-ip",
            "name": "mongodb-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "liti-case-analytics-engineer",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/liti-case-analytics-engineer/regions/us-west1/addresses/mongodb-ip"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_airflow",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-09-25T18:06:07.414-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/liti-case-analytics-engineer/global/firewalls/allow-airflow",
            "log_config": [],
            "name": "allow-airflow",
            "network": "https://www.googleapis.com/compute/v1/projects/liti-case-analytics-engineer/global/networks/data-platform-network",
            "priority": 1000,
            "project": "liti-case-analytics-engineer",
            "self_link": "https://www.googleapis.com/compute/v1/projects/liti-case-analytics-engineer/global/firewalls/allow-airflow",
            "source_ranges": [
              "177.128.8.127/32"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "airflow"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-09-25T18:06:07.316-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/liti-case-analytics-engineer/global/firewalls/allow-internal",
            "log_config": [],
            "name": "allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/liti-case-analytics-engineer/global/networks/data-platform-network",
            "priority": 1000,
            "project": "liti-case-analytics-engineer",
            "self_link": "https://www.googleapis.com/compute/v1/projects/liti-case-analytics-engineer/global/firewalls/allow-internal",
            "source_ranges": [
              "10.0.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_mongodb_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "27017"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-09-26T19:38:28.841-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/liti-case-analytics-engineer/global/firewalls/allow-mongodb-ingress",
            "log_config": [],
            "name": "allow-mongodb-ingress",
            "network": "https://www.googleapis.com/compute/v1/projects/liti-case-analytics-engineer/global/networks/data-platform-network",
            "priority": 1000,
            "project": "liti-case-analytics-engineer",
            "self_link": "https://www.googleapis.com/compute/v1/projects/liti-case-analytics-engineer/global/firewalls/allow-mongodb-ingress",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "mongodb"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_postgres_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "5432"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-09-26T17:17:17.334-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/liti-case-analytics-engineer/global/firewalls/allow-postgres-ingress",
            "log_config": [],
            "name": "allow-postgres-ingress",
            "network": "https://www.googleapis.com/compute/v1/projects/liti-case-analytics-engineer/global/networks/data-platform-network",
            "priority": 1000,
            "project": "liti-case-analytics-engineer",
            "self_link": "https://www.googleapis.com/compute/v1/projects/liti-case-analytics-engineer/global/firewalls/allow-postgres-ingress",
            "source_ranges": [
              "35.197.20.45/32",
              "35.230.48.12/32",
              "35.230.80.123/32"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_address.airbyte_ip",
            "google_compute_address.airflow_ip",
            "google_compute_address.metabase_ip",
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80",
                  "443",
                  "8000",
                  "8080",
                  "3000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-09-25T18:06:07.337-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/liti-case-analytics-engineer/global/firewalls/allow-ssh-http",
            "log_config": [],
            "name": "allow-ssh-http",
            "network": "https://www.googleapis.com/compute/v1/projects/liti-case-analytics-engineer/global/networks/data-platform-network",
            "priority": 1000,
            "project": "liti-case-analytics-engineer",
            "self_link": "https://www.googleapis.com/compute/v1/projects/liti-case-analytics-engineer/global/firewalls/allow-ssh-http",
            "source_ranges": [
              "177.128.8.127/32"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "airbyte_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20240910",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/liti-case-analytics-engineer/zones/us-west1-b/disks/airbyte-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/liti-case-analytics-engineer/zones/us-west1-b/instances/airbyte-instance",
            "instance_id": "8796624042172594404",
            "label_fingerprint": "W2T8LdpDYjo=",
            "labels": {
              "managed-by": "terraform",
              "name": "airbyte_instance"
            },
            "machine_type": "e2-standard-2",
            "metadata_fingerprint": "LdEdv-bKOqk=",
            "metadata_startup_script": "#!/bin/bash\nsudo apt-get update\nsudo apt-get install -y curl git python3-pip docker.io docker-compose nginx\nsudo systemctl start docker\nsudo systemctl enable docker\nsudo curl -LsfS https://get.airbyte.com | bash -\n\n# Configurar o Nginx como proxy reverso\n\n# Criar arquivo de configuração do Nginx para o Airflow\nsudo tee /etc/nginx/sites-available/airflow \u003c\u003cEOF\nserver {\n    listen 80;\n    server_name _;\n\n    location / {\n        pro [...]
            "name": "airbyte-instance",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.197.20.45",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/liti-case-analytics-engineer/global/networks/data-platform-network",
                "network_ip": "10.0.0.21",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/liti-case-analytics-engineer/regions/us-west1/subnetworks/data-platform-subnet",
                "subnetwork_project": "liti-case-analytics-engineer"
              }
            ],
            "project": "liti-case-analytics-engineer",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/liti-case-analytics-engineer/zones/us-west1-b/instances/airbyte-instance",
            "service_account": [
              {
                "email": "airbyte-sa@liti-case-analytics-engineer.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "airbyte",
              "terraform"
            ],
            "tags_fingerprint": "6Sx1jYljmVk=",
            "zone": "us-west1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_address.airflow_ip",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnet",
            "google_service_account.airbyte_sa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "airflow_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20240910",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/liti-case-analytics-engineer/zones/us-west1-b/disks/airflow-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/liti-case-analytics-engineer/zones/us-west1-b/instances/airflow-instance",
            "instance_id": "2284248685541570786",
            "label_fingerprint": "TxTI3i8hj6I=",
            "labels": {
              "managed-by": "terraform",
              "name": "airflow_instance"
            },
            "machine_type": "e2-standard-2",
            "metadata_fingerprint": "UZIXa0Zvvt4=",
            "metadata_startup_script": "#!/bin/bash\n\n# Atualizar pacotes e instalar dependências\nsudo apt-get update\n\n# Instalar pacotes necessários\nsudo apt-get install -y curl git python3-pip docker.io docker-compose nginx\n\n# Iniciar e habilitar o Docker\nsudo systemctl start docker\nsudo systemctl enable docker\n\n# Adicionar o usuário atual ao grupo docker\nsudo usermod -aG docker $USER\n# Aplicar a nova associação ao grupo docker\nnewgrp docker\n\n# Instalar o astro CLI\ncurl -sSL h [...]
            "name": "airflow-instance",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.230.48.12",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/liti-case-analytics-engineer/global/networks/data-platform-network",
                "network_ip": "10.0.0.22",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/liti-case-analytics-engineer/regions/us-west1/subnetworks/data-platform-subnet",
                "subnetwork_project": "liti-case-analytics-engineer"
              }
            ],
            "project": "liti-case-analytics-engineer",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/liti-case-analytics-engineer/zones/us-west1-b/instances/airflow-instance",
            "service_account": [
              {
                "email": "airflow-sa@liti-case-analytics-engineer.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "airflow",
              "terraform"
            ],
            "tags_fingerprint": "63S77ztta2o=",
            "zone": "us-west1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_address.airbyte_ip",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnet",
            "google_service_account.airflow_sa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "metabase_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20240910",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/liti-case-analytics-engineer/zones/us-west1-b/disks/metabase-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/liti-case-analytics-engineer/zones/us-west1-b/instances/metabase-instance",
            "instance_id": "8743924810630161875",
            "label_fingerprint": "vN4_7jC4CRQ=",
            "labels": {
              "managed-by": "terraform",
              "name": "metabase_instance"
            },
            "machine_type": "e2-standard-2",
            "metadata_fingerprint": "p-y60Q9Icvs=",
            "metadata_startup_script": "#!/bin/bash\n\n# Atualizar pacotes e instalar dependências\nsudo apt-get update\nsudo apt-get install -y curl git python3-pip docker.io docker-compose nginx postgresql\n\n# Configurar PostgreSQL\nsudo -u postgres psql -c \"CREATE DATABASE metabase_db;\"\nsudo -u postgres psql -c \"CREATE USER metabase_user WITH ENCRYPTED PASSWORD 'senha_segura';\"\nsudo -u postgres psql -c \"GRANT ALL PRIVILEGES ON DATABASE metabase_db TO metabase_user;\"\n\n# Configurar M [...]
            "name": "metabase-instance",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.230.80.123",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/liti-case-analytics-engineer/global/networks/data-platform-network",
                "network_ip": "10.0.0.28",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/liti-case-analytics-engineer/regions/us-west1/subnetworks/data-platform-subnet",
                "subnetwork_project": "liti-case-analytics-engineer"
              }
            ],
            "project": "liti-case-analytics-engineer",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/liti-case-analytics-engineer/zones/us-west1-b/instances/metabase-instance",
            "service_account": [
              {
                "email": "metabase-sa@liti-case-analytics-engineer.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-west1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_address.metabase_ip",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnet",
            "google_service_account.metabase_sa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "mongodb_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20240910",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/liti-case-analytics-engineer/zones/us-west1-b/disks/mongodb-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/liti-case-analytics-engineer/zones/us-west1-b/instances/mongodb-instance",
            "instance_id": "6404772311401315767",
            "label_fingerprint": "wJ2X9pscy9I=",
            "labels": {
              "managed-by": "terraform",
              "name": "mongodb_instance"
            },
            "machine_type": "e2-micro",
            "metadata_fingerprint": "iO9vCIv_2h4=",
            "metadata_startup_script": "#!/bin/bash\n# Atualizar pacotes\nsudo apt-get update\n\n# Instalar o MongoDB\nsudo apt-get install -y wget gnupg\n\n# Importar a chave pública do MongoDB\nwget -qO - https://www.mongodb.org/static/pgp/server-6.0.asc | sudo apt-key add -\n\n# Criar arquivo de lista para o MongoDB\necho \"deb [ arch=amd64,arm64 ] https://repo.mongodb.org/apt/debian bullseye/mongodb-org/6.0 main\" | sudo tee /etc/apt/sources.list.d/mongodb-org-6.0.list\n\n# Atualizar novamen [...]
            "name": "mongodb-instance",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.83.94.111",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/liti-case-analytics-engineer/global/networks/data-platform-network",
                "network_ip": "10.0.0.29",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/liti-case-analytics-engineer/regions/us-west1/subnetworks/data-platform-subnet",
                "subnetwork_project": "liti-case-analytics-engineer"
              }
            ],
            "project": "liti-case-analytics-engineer",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/liti-case-analytics-engineer/zones/us-west1-b/instances/mongodb-instance",
            "service_account": [
              {
                "email": "mongodb-sa@liti-case-analytics-engineer.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "mongodb",
              "terraform"
            ],
            "tags_fingerprint": "sJJGiIl1TPs=",
            "zone": "us-west1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_address.mongodb_ip",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnet",
            "google_service_account.mongodb_sa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/liti-case-analytics-engineer/global/networks/data-platform-network",
            "mtu": 0,
            "name": "data-platform-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "liti-case-analytics-engineer",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/liti-case-analytics-engineer/global/networks/data-platform-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-09-25T18:06:09.621-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/liti-case-analytics-engineer/regions/us-west1/subnetworks/data-platform-subnet",
            "ip_cidr_range": "10.0.0.0/16",
            "name": "data-platform-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/liti-case-analytics-engineer/global/networks/data-platform-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "liti-case-analytics-engineer",
            "purpose": "PRIVATE",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/liti-case-analytics-engineer/regions/us-west1/subnetworks/data-platform-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}